--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     
                     // Tunggu animasi fade-out selesai, lalu redirect
                     setTimeout(() => {
-                        window.location.href = "cupid.php";
+                        window.location.href = "cupid";
                     }, 500);
                     
                     return;
